conexao com banco de dados pronta

--- a/EngInt2/EngInt2/appsettings.json
+++ b/EngInt2/EngInt2/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EngInt2Context": "server=localhost;uid=root;pwd=1234567;database=engint2"
+  }
 }
